--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "reliv/axosoft-api": "1.*"
   },
   "require-dev": {
-    "reliv/axosoft-api": "*@dev"
+    "reliv/axosoft-api": "1.*@dev"
   },
   "autoload": {
     "psr-4": {
