Fix composer files

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "reliv/axosoft-api": "1.*"
   },
   "require-dev": {
-    "reliv/axosoft-api": "1.*@dev"
+    "phpunit/phpunit": "4.6.*",
+    "squizlabs/php_codesniffer": "2.*"
   },
   "autoload": {
     "psr-4": {
