--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "reliv/rcm-axosoft",
+  "name": "rcm/axosoft",
   "description": "Error logger for Axosoft on-time.",
   "type": "library",
   "license": "BSD-3-Clause",
