--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   ],
   "require": {
     "php": ">=5.4",
-    "reliv/axosoft-api": "1.*"
+    "rcm/axosoft-api": "1.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.6.*",
